--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,6 +3,19 @@
   padding-bottom: 40px;
   background-color: #11131f;
 }
+.conatiner-hero{
+  position: relative;
+}
+.blur-hero {
+  width: 279px;
+  height: 279px;
+  position: absolute;
+  bottom: 108px;
+  right: 202px;
+  rotate: 45deg;
+  // background-image: radial-gradient(circle at center, #939cac 90%);
+  // z-index: 0;
+}
 .hero-title {
   width: 332px;
   height: 120px;
