--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,9 +12,10 @@
 
 .container {
   margin: 0 auto;
-  width: 375px;
+  width: 335px;
   padding-inline-start: 0;
   margin-block-end: 0;
+  overflow: hidden;
 }
 
 body {
