--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -48,6 +48,81 @@
   color: #c4cdff;
 }
 
+// BURGERMENU
+
+.burger-menu {
+  width: 44px;
+  height: 44px;
+  background-color: #11131f;
+  border: none;
+  border-radius: 12px;
+  z-index: 101;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  text-align: center;
+  padding: 4px 0;
+  gap: 4px;
+}
+.menu-line {
+  width: 20px;
+  height: 2px;
+  background-color: white;
+  border-radius: 1px;
+}
+.menu-overlay.active {
+  transform: translateX(0);
+}
+.menu-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #11131f;
+  z-index: 100;
+  transform: translateX(-100%);
+}
+.menu-header {
+  position: relative;
+  z-index: 10;
+  align-items: center;
+  justify-content: space-between;
+  display: flex;
+}
+.close-btn {
+  width: 40px;
+  height: 40px;
+  background-color: #11131f;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  position: relative;
+}
+.menu-list{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  width: 100%;
+}
+.mobile-screen {
+  position: relative;
+  overflow: hidden;
+}
+.menu-item {
+  color: white;
+  @extend %font;
+  font-weight: 700;
+  font-size: 14px;
+  text-transform: uppercase;
+  width: 50px;
+  height: 17px;
+}
+
 // TABLET
 @media screen and (min-width: 600px) and (max-width: 1024px) {
   .burger-menu {
