--- a/sass/components/_rent.scss
+++ b/sass/components/_rent.scss
@@ -50,7 +50,43 @@
   width: 335px;
   height: 289px;
 }
-
+.rent-btn-wrapper{
+  width: 335px;
+  height: 325px;
+  position: relative;
+  margin-top: 24px;
+}
+.rent-img-three{
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 260px;
+  height: 244px;
+}
+.rent-btn-title{
+  z-index: 100;
+  padding-top: 146px;
+  width: 312px;
+  margin: 0;
+  margin-bottom: 40px;
+  height: 120px;
+  @extend %font;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 110%;
+  color: white;
+}
+.rent-btn{
+  width: 131px;
+  height: 43px;
+  border-radius: 60px;
+  border: 1px white solid;
+   @extend %font;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 110%;
+  background-color: #11131f;
+}
 // TABLET
 
 @media screen and (min-width: 600px) and (max-width: 1024px) {
@@ -87,7 +123,7 @@
   .rent {
     padding-top: 80px;
     padding-bottom: 90px;
-    
+
     height: 1549px;
   }
   .rent-title {
