--- a/css/style.css
+++ b/css/style.css
@@ -540,9 +540,9 @@
 
 .rent-btn-wrapper {
   width: 335px;
-  height: 325px;
   position: relative;
   margin-top: 24px;
+  height: 355px;
 }
 
 .rent-img-three {
@@ -555,18 +555,20 @@
 
 .rent-btn-title {
   z-index: 100;
-  padding-top: 146px;
   width: 312px;
   margin: 0;
-  margin-bottom: 40px;
   height: 120px;
   font-weight: 500;
   font-size: 36px;
   line-height: 110%;
   color: white;
+  position: absolute;
+  top: 146px;
+  left: 0px;
 }
 
 .rent-btn {
+  position: absolute;
   width: 131px;
   height: 43px;
   border-radius: 60px;
@@ -575,6 +577,48 @@
   font-size: 14px;
   line-height: 110%;
   background-color: #11131f;
+  color: white;
+  bottom: 0px;
+  left: 0px;
+}
+
+.rent-btn:hover {
+  background-color: #181b2c;
+}
+
+.rent-img-three-destop {
+  display: none;
+}
+
+.rent-btn-title-desktop {
+  display: none;
+  z-index: 100;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 110%;
+  color: white;
+}
+
+.rent-btn-desktop {
+  display: none;
+  border-radius: 60px;
+  border: 1px white solid;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 110%;
+  background-color: #11131f;
+  color: white;
+}
+
+.bg-ellips {
+  position: absolute;
+  width: 285px;
+  height: 285px;
+  background-color: #91afba;
+  filter: blur(75px);
+  z-index: 5;
+  opacity: 0.6;
+  border-radius: 50%;
 }
 
 @media screen and (min-width: 600px) and (max-width: 1024px) {
@@ -603,12 +647,51 @@
     width: 308px;
     height: 289px;
   }
+  .rent-btn-wrapper {
+    width: 698px;
+    height: 380px;
+  }
+  .rent-btn-title {
+    width: 641px;
+    height: 231px;
+    font-weight: 500;
+    font-size: 70px;
+    top: 30px;
+  }
+  .rent-btn {
+    width: 153px;
+    height: 48px;
+  }
+  .rent-img-three {
+    right: 72px;
+    top: -115px;
+  }
+  .bg-ellips {
+    position: absolute;
+    width: 399px;
+    height: 399px;
+    background-color: #91afba;
+    filter: blur(140px);
+    z-index: 5;
+    opacity: 0.6;
+    border-radius: 50%;
+  }
+  .rent-img-three-destop {
+    display: none;
+  }
+  .rent-btn-title-desktop {
+    display: none;
+  }
+  .rent-btn-desktop {
+    display: none;
+  }
 }
 @media screen and (min-width: 1025px) {
   .rent {
     padding-top: 80px;
     padding-bottom: 90px;
     height: 1549px;
+    position: relative;
   }
   .rent-title {
     width: 514px;
@@ -620,6 +703,8 @@
     float: right;
     text-align: left;
     gap: 32px;
+    right: 0;
+    position: absolute;
   }
   .rent-container {
     display: flex;
@@ -630,7 +715,7 @@
     position: absolute;
     width: 533px;
     height: 473px;
-    top: 470px;
+    top: 306px;
     left: 372px;
     margin: 0;
   }
@@ -638,11 +723,62 @@
     position: absolute;
     width: 308px;
     height: 289px;
-    top: 723px;
+    top: 559px;
     left: 32px;
   }
+  .rent-btn-wrapper {
+    height: 1385px;
+  }
+  .rent-img-three {
+    display: none;
+  }
+  .rent-btn-title {
+    display: none;
+  }
+  .rent-btn {
+    display: none;
+  }
+  .rent-img-three-destop {
+    display: block;
+    position: absolute;
+    width: 260px;
+    height: 244px;
+    top: 811px;
+    left: 372px;
+  }
+  .rent-btn-title-desktop {
+    display: block;
+    position: absolute;
+    width: 882px;
+    height: 370px;
+    font-size: 100px;
+    margin: 0;
+    bottom: 112px;
+    left: 199px;
+  }
+  .rent-btn-desktop {
+    display: block;
+    position: absolute;
+    width: 153px;
+    height: 48px;
+    margin: 0;
+    left: 199px;
+    bottom: 0px;
+  }
+  .bg-ellips {
+    position: absolute;
+    width: 414px;
+    height: 414px;
+    background-color: #91afba;
+    filter: blur(90px);
+    z-index: 5;
+    opacity: 0.3;
+    border-radius: 50%;
+    bottom: 130px;
+    left: 190px;
+  }
 }
-.logo-title, .header-link, .menu-item, .hero-title, .hero-paragraph, .hero-btn, .inner-title, .inner-price, .inner-span, .rent-title, .rent-list-paragraph, .rent-btn-title, .rent-btn {
+.logo-title, .header-link, .menu-item, .hero-title, .hero-paragraph, .hero-btn, .inner-title, .inner-price, .inner-span, .rent-title, .rent-list-paragraph, .rent-btn-title, .rent-btn, .rent-btn-title-desktop, .rent-btn-desktop {
   font-family: "DM Sans", sans-serif;
   font-style: normal;
 }
