--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,86 @@
+.adventages {
+  background-color: #11131f;
+  padding-top: 80px;
+  padding-bottom: 56px;
+}
+
+.contaier-adventages {
+  position: relative;
+}
+
+.adventages-img {
+  width: 335px;
+  height: 335px;
+  margin-bottom: 24px;
+}
+
+.adventages-name {
+  max-width: 72px;
+  text-align: center;
+  height: 15px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 110%;
+  color: #11131f;
+  background-color: white;
+  border-radius: 60px;
+  padding: 14px 28px;
+  margin: 0;
+  position: absolute;
+  z-index: 10;
+}
+
+.diving {
+  top: 274px;
+  left: 24px;
+}
+
+.fishing {
+  top: 633px;
+  left: 24px;
+}
+
+.sunbathing {
+  top: 992px;
+  left: 24px;
+}
+
+@media screen and (min-width: 600px) and (max-width: 1024px) {
+  .adventages {
+    padding-top: 100px;
+    padding-bottom: 56px;
+    height: 1437px;
+  }
+  .contaier-adventages {
+    position: relative;
+  }
+  .adventages-img {
+    margin-bottom: 0px;
+    position: absolute;
+  }
+  .diving-img {
+    width: 704px;
+    height: 632px;
+    top: 0px;
+  }
+  .fishing-img {
+    width: 400px;
+    height: 389px;
+    top: 664px;
+    right: 0px;
+  }
+  .sunbathing-img {
+    width: 380px;
+    height: 352px;
+    bottom: 0px;
+    left: 0px;
+  }
+  .adventages-name {
+    width: 92px;
+    height: 20px;
+    font-size: 18px;
+  }
+}
 .header {
   padding: 24px 0px 24px 0px;
   background-color: #11131f;
@@ -917,7 +1000,7 @@
     width: 1025px;
   }
 }
-.logo-title, .header-link, .menu-item, .hero-title, .hero-paragraph, .hero-btn, .inner-title, .inner-price, .inner-span, .rent-title, .rent-list-paragraph, .rent-btn-title, .rent-btn, .rent-btn-title-desktop, .rent-btn-desktop, .yacht-name, .yacht-type, .yacht-qualities {
+.adventages-name, .logo-title, .header-link, .menu-item, .hero-title, .hero-paragraph, .hero-btn, .inner-title, .inner-price, .inner-span, .rent-title, .rent-list-paragraph, .rent-btn-title, .rent-btn, .rent-btn-title-desktop, .rent-btn-desktop, .yacht-name, .yacht-type, .yacht-qualities {
   font-family: "DM Sans", sans-serif;
   font-style: normal;
 }
