--- a/css/style.css
+++ b/css/style.css
@@ -298,11 +298,14 @@
 @media screen and (min-width: 1025px) {
   .form {
     align-items: center;
-    margin: 0 auto;
+    display: flex;
+    justify-content: center;
   }
   .form-title {
     margin-bottom: 64px;
     width: 282px;
+    font-size: 60px;
+    height: 132px;
   }
   .form-img {
     width: 282px;
@@ -314,6 +317,11 @@
   .form-container {
     display: flex;
     gap: 168px;
+    width: 1216px;
+    margin: 0 auto;
+    align-items: center;
+    display: flex;
+    justify-content: center;
   }
   .form-btn {
     width: 132px;
