--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,6 @@
 .footer {
   background-color: #11131f;
   padding-top: 40px;
-  padding-bottom: 14px;
 }
 
 .footer-logo-wrapper {
@@ -149,6 +148,10 @@
   letter-spacing: 3%;
   color: white;
   text-transform: uppercase;
+}
+
+.footer-link :hover {
+  color: rgb(180, 180, 180);
 }
 
 .footer-social-wrapper {
@@ -182,6 +185,8 @@
   gap: 14px;
   justify-content: center;
   width: 335px;
+  background-color: #11131f;
+  margin-bottom: 14px;
 }
 
 .policy {
@@ -192,8 +197,45 @@
   letter-spacing: 3%;
   color: white;
   opacity: 50%;
+  margin: 0;
 }
 
+@media screen and (min-width: 600px) and (max-width: 1024px) {
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+  }
+  .footer {
+    padding-bottom: 100px;
+  }
+  .policy {
+    height: 17px;
+    font-size: 14px;
+  }
+  .footer-link :hover {
+    color: rgb(180, 180, 180);
+  }
+}
+@media screen and (min-width: 1025px) {
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+  }
+  .footer-item:hover {
+    color: rgb(180, 180, 180);
+  }
+  .footer {
+    padding-bottom: 186px;
+  }
+  .policy {
+    height: 17px;
+    font-size: 14px;
+  }
+  .footer-list {
+    display: flex;
+    gap: 24px;
+  }
+}
 .form {
   background-color: #11131f;
   text-align: left;
