--- a/sass/components/_recalls.scss
+++ b/sass/components/_recalls.scss
@@ -33,15 +33,13 @@
   overflow: hidden;
   border-radius: 24px;
   text-align: center;
-  width: 335px;
-  margin-bottom: 14px;
+  max-width: 1260px;
+  margin: 0px;
 }
 .recalls-container {
   display: flex;
 }
 .recalls-slider-item {
-  width: 307px;
-  min-width: 100%;
   display: flex;
   overflow: hidden;
   justify-content: center;
@@ -50,7 +48,7 @@
   flex: 0 0 100%;
 }
 .recalls-content {
-    padding: 24px;
+  padding: 24px;
 }
 .recalls-slider-img {
   width: 48px;
@@ -88,71 +86,127 @@
   z-index: 10;
   transform: translateX(-50%);
   display: flex;
-  bottom: 400px;
+  bottom: 384px;
   gap: 10px;
 }
 .nav-dot {
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  background-color: #1F212D;
+  background-color: #1f212d;
 }
 .nav-dot.active {
   background-color: #88b3b9;
   border: 1px solid #93abae;
 }
 
-
-@media screen and (min-width: 600px) and (max-width: 1024px){
-    .recalls-title-wrapper{
-        position: relative;
-        height: 320px;
-    }
-    .recalls-first-title{
-        width: 501px;
-        height: 114px;
-        font-size: 32px;
-        line-height: 120%;
-        letter-spacing: -4.5%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        margin: 0;
-    }
-    .recalls-second-title{
-        width: 273px;
-        height: 110px;
-        font-size: 16px;
-        position: absolute;
-        top: 146px;
-        right: 0;
-        margin: 0;
-    }
-    .recalls-slider-item{
-        flex: 0 0 50%;
-    }
+@media screen and (min-width: 600px) and (max-width: 1024px) {
+  .recalls-title-wrapper {
+    position: relative;
+    height: 320px;
+  }
+  .recalls-first-title {
+    width: 501px;
+    height: 114px;
+    font-size: 32px;
+    line-height: 120%;
+    letter-spacing: -4.5%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+  }
+  .recalls-second-title {
+    height: 110px;
+    font-size: 16px;
+    position: absolute;
+    top: 146px;
+    right: 0;
+    margin: 0;
+  }
+  .recalls-slider-item {
+    flex: 0 0 50%;
+    height: 280px;
+    border-radius: 24px;
+  }
+  // .recalls {
+  //   gap: 14px;
+  // }
+  .recalls-slider-img {
+    width: 56px;
+    height: 56px;
+    margin-bottom: 24px;
+  }
+  .recalls-slider-name {
+    height: 20px;
+    font-size: 18px;
+    margin-bottom: 8px;
+  }
+  .recalls-slider-info {
+    height: 110px;
+    font-size: 16px;
+  }
+  .recalls-content {
+    padding: 24px 32px;
+    height: 218px;
+    // padding: 0px;
+  }
+  .recalls-container {
+    gap: 14px;
+  }
+  .slider-nav {
+    bottom: 320px;
+  }
 }
 
-
-@media screen and (min-width: 1025px){
-    .recalls-title-wrapper{
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 64px;
-    }
-    .recalls-first-title{
-        width: 501px;
-        height: 114px;
-        font-size: 32px;
-        line-height: 120%;
-        letter-spacing: -4.5%;
-        margin: 0;
-    }
-    .recalls-second-title{
-        width: 273px;
-        height: 110px;
-        font-size: 16px;
-        font-weight: 400;
-        margin: 0;
-    }
+@media screen and (min-width: 1025px) {
+  .recalls-title-wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 64px;
+  }
+  .recalls-first-title {
+    width: 501px;
+    height: 114px;
+    font-size: 32px;
+    line-height: 120%;
+    letter-spacing: -4.5%;
+    margin: 0;
+  }
+  .recalls-second-title {
+    width: 273px;
+    height: 110px;
+    font-size: 16px;
+    font-weight: 400;
+    margin: 0;
+  }
+  .recalls-slider-item {
+    flex: 0 0 33.33%;
+    height: 282px;
+    border-radius: 24px;
+  }
+  .nav-dot {
+    display: none;
+  }
+  .recalls-container {
+    gap: 16px;
+  }
+  .recalls-slider-img {
+    width: 56px;
+    height: 56px;
+    margin-bottom: 24px;
+  }
+  .recalls-slider-name {
+    height: 20px;
+    font-size: 18px;
+    margin-bottom: 8px;
+  }
+  .recalls-slider-info {
+    height: 110px;
+    font-size: 16px;
+  }
+  .recalls-content {
+    padding: 32px;
+    height: 218px;
+  }
 }
